@@ -7,3 +7,4 @@
 #undef DRIVER_SOLARIS
 #undef DRIVER_MKLINUX
 #undef DRIVER_ALSA
+#undef DRIVER_NEWALSA
