@@ -1,7 +1,12 @@
 /* Advanced Linux Sounds Architecture support for EsounD
    7-19-98: Nick Lopez( kimo_sabe@usa.net ) - it starts!
 */
-#include <sys/soundlib.h>
+
+#if defined(DRIVER_NEWALSA)
+#  include <sys/asoundlib.h>
+#else
+#  include <sys/soundlib.h>
+#endif
 
 void *handle;
 
